# port-watch

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  PopoverApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/src/: app_settings.rs  classifier.rs  cli.rs  cli_install.rs  guards.rs  home.rs  lib.rs  main.rs  poller.rs  process_actions.rs  scanner.rs  tray.rs
src-tauri/src/commands/: cli_install.rs  filesystem.rs  mod.rs  notifications.rs  ports.rs  process.rs  settings.rs  workflow.rs
src-tauri/src/platform/: mod.rs  path_validation.rs  shared.rs
src-tauri/src/platform/linux/: classifier.rs  guards.rs  mod.rs  scanner.rs  shell.rs
src-tauri/src/platform/macos/: classifier.rs  guards.rs  scanner.rs  shell.rs
src-tauri/src/platform/windows/: classifier.rs  guards.rs  mod.rs  paths.rs  scan_tcp.ps1  scan_udp.ps1  scanner.rs  shell.rs
src/components/: cli-install-prompt.tsx  delete-dialog.tsx  port-history-timeline.tsx  port-table-actions-cell.tsx  port-table-row.tsx  port-table.tsx  port-toolbar.tsx  settings-dialog.tsx  stop-dialog.tsx
src/components/popover/: popover-footer.tsx  popover-header.tsx  popover-list.tsx  popover-row.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  switch.tsx  table.tsx  tooltip.tsx
src/hooks/: use-liquid-glass.ts  use-port-scan.ts  use-theme.ts
src/lib/: cli-install.ts  column-sizing.ts  export-snapshot.ts  platform.ts  port-filter.test.ts  port-filter.ts  port-hints.ts  port-history.ts  types.ts  utils.ts
