[package]
name = "port-watch"
version = "0.1.0"
description = "Mac Port Monitor — watch listening TCP ports and manage processes"
authors = ["ginpachi"]
edition = "2021"

[lib]
name = "port_watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
dirs = "6"
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-liquid-glass = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
trash = "5"
thiserror = "2"
