[package]
name = "port-watch"
version = "0.1.0"
description = "Cross-platform port monitor — watch listening TCP/UDP ports and manage processes"
authors = ["ginpachi"]
edition = "2021"

[lib]
name = "port_watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
dirs = "6"
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
trash = "5"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-liquid-glass = "0.1"
