[package]
name = "port-watch"
version = "0.2.0"
description = "Cross-platform port monitor — watch listening TCP/UDP ports and manage processes"
authors = ["ginpachi"]
edition = "2021"

[lib]
name = "port_watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
dirs = "6"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
trash = "5"
thiserror = "2"
